# pdfsp

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  uv_setup.py
.github/workflows/: test-pypi-win.yml  test-windows.yml
docs/source/: home.rst
pdfsp/: __init__.py  _options.py  _typing.py  _utils.py  cli.py  core.py
pdfsp/tests/: test_main.py
