
[project]
name = "pdfsp"
version = "0.1.0"
description = "Extracts data from PDF files and saves it to Excel files."
authors = [
    { name = "Sermet Pekin", email = "Sermet.Pekin@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "streamlit>=1.44.1",
]
[project.urls]
repository = "https://github.com/SermetPekin/pdfsp"


[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "tox>=4.25.0",
]
